New SPEC for View Namespace

--- a/testem.yml
+++ b/testem.yml
@@ -3,11 +3,18 @@ framework: jasmine
 launch_in_dev:
 - PhantomJS
 # - Chrome
+# - Firefox
+# - Safari
+# - Opera
+# - PhantomJS
+
+# test_page: spec/dependencies/page.html
 
 src_files:
 - src/build/monocle.js
 - src/build/monocle.model.js
 - src/build/monocle.controller.js
+- src/build/monocle.templayed.js
 - src/build/monocle.view.js
-- src/build/monocle.mustache.js
+- spec/dependencies/**/*.js
 - spec/build/**/*.js
